...
        outputRange: [0, 8],
      }),
    ],
  };

  return (
    <Animated.View style={[styles.container, containerAnimatedStyle]} testID="exercise.complete">
      <Text style={[styles.title, isDarkMode && styles.titleDark]}>Complete</Text>
    </Animated.View>
  );
};

const styles = StyleSheet.create({
  container: {
...
