appId: com.mmazzarolo.breathly
name: Customize and persist settings
---
- clearState
- launchApp
- extendedWaitUntil:
    visible:
      id: "home.screen"
    timeout: 10000
- tapOn:
    id: "home.customize"
- extendedWaitUntil:
    visible:
      id: "settings.screen"
    timeout: 5000
- assertVisible: ".*Square \\(4-4-4-4\\).*"
- tapOn:
    id: "settings.pattern"
- assertVisible:
    id: "settings.patterns.screen"
- tapOn:
    id: "settings.pattern.deep-calm"
- runFlow:
    file: ../subflows/return-from-patterns.yaml
- assertVisible: ".*Deep Calm \\(4-7-8-0\\).*"
- runFlow:
    file: ../subflows/set-disabled-voice.yaml
- tapOn:
    id: "settings.system-theme"
- runFlow:
    file: ../subflows/set-dark-theme.yaml
- tapOn:
    id: "settings.vibration"
- scrollUntilVisible:
    element:
      id: "settings.timer.increase"
    direction: DOWN
- tapOn:
    id: "settings.timer.increase"
- runFlow:
    file: ../subflows/close-settings.yaml
- assertVisible:
    id: "home.screen"
- killApp
- launchApp
- extendedWaitUntil:
    visible:
      id: "home.screen"
    timeout: 10000
- tapOn:
    id: "home.customize"
- extendedWaitUntil:
    visible:
      id: "settings.screen"
    timeout: 5000
- assertVisible: ".*Deep Calm \\(4-7-8-0\\).*"
- assertVisible: ".*Disabled.*"
- assertVisible: ".*Dark theme.*"
- scrollUntilVisible:
    element:
      id: "settings.timer.value"
    direction: DOWN
- assertVisible:
    id: "settings.timer.value"
    text: "3"
